practice of control statements(if-else)

--- a/mypractice.ipynb
+++ b/mypractice.ipynb
@@ -133,6 +133,86 @@
     "a=10\n",
     "print(f'The value of a is {a}')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "bbccf310",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "num_3: 10\n"
+     ]
+    }
+   ],
+   "source": [
+    "num_1=10\n",
+    "num_2=20\n",
+    "num_3=num_1\n",
+    "num_1=100\n",
+    "print('num_3:', num_3)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "a7008eeb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "num_x=\"2\"\n",
+    "print(num_x)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "20938cc8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(13//5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "484f7ac5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=True\n",
+    "b=True\n",
+    "\n",
+    "print(not b)"
+   ]
   }
  ],
  "metadata": {
