--- a/WhileLoopPractice.ipynb
+++ b/WhileLoopPractice.ipynb
@@ -569,13 +569,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "7af29da7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3, 12, 20]\n"
+     ]
+    }
+   ],
    "source": [
     "a = [x *3 if x <5 else x *4 for x in [1,4,5]]\n",
     "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "0165c63f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "i = 1\n",
+    "while i <= 5:\n",
+    "    print(i)\n",
+    "    i += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6031c5cb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "i = 10\n",
+    "while i < 10:\n",
+    "    if i % 2 == 0:\n",
+    "        print(i)\n",
+    "        i += 1\n",
+    "pass\n"
    ]
   }
  ],
