Functions Practice day - 3

--- a/FunctionsPractice.ipynb
+++ b/FunctionsPractice.ipynb
@@ -635,8 +635,221 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "f73bfb77",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Positional arguments\n",
+    "def area(w, h):\n",
+    "    return w * h\n",
+    "area(3, 4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "c018ce96",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Hi, Sam?'"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Keyword arguments\n",
+    "def greet(name, punctuation=\"!\"):\n",
+    "    return f\"Hi, {name}{punctuation}\"\n",
+    "greet(name=\"Sam\", punctuation=\"?\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "9dda7a6c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "125"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Defaults\n",
+    "def power(base, exponent=2):\n",
+    "    return base ** exponent\n",
+    "power(5)\n",
+    "power(5, 3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "22492bdc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Variadic positional (*args)\n",
+    "def total(*nums):\n",
+    "    return sum(nums)\n",
+    "total(1, 2, 3, 4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "3444a370",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO ('start', 'ok') {'user': 'sam', 'retry': False}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Mixed positional, keyword, defaults, *args, **kwargs\n",
+    "def log(level, *msgs, **meta):\n",
+    "    print(level, msgs, meta)\n",
+    "log(\"INFO\", \"start\", \"ok\", user=\"sam\", retry=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "aaa6d016",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(800, 600, False)"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Keyword-only (after a *)\n",
+    "def resize(width, height, *, keep_ratio=True):\n",
+    "    return (width, height, keep_ratio)\n",
+    "resize(800, 600, keep_ratio=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "4bbb5ee6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Positional-only \n",
+    "def add(x, y, /, z=0):\n",
+    "    return x + y + z\n",
+    "add(3, 4)\n",
+    "add(3, 4, 5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "6d26a62d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Argument unpacking with *\n",
+    "values = (2, 3)\n",
+    "add(*values)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "e1094d2d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(800, 600, False)"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Keyword unpacking with **\n",
+    "options = {\"keep_ratio\": False}\n",
+    "resize(800, 600, **options)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5ee59c12",
    "metadata": {},
    "outputs": [],
    "source": []
