Functions Practice Day-4

--- a/FunctionsPractice.ipynb
+++ b/FunctionsPractice.ipynb
@@ -848,11 +848,309 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "5ee59c12",
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Simple validator\n",
+    "def is_even(n: int) -> bool:\n",
+    "    return n % 2 == 0\n",
+    "\n",
+    "is_even(4)  # True\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "fd74561c",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Multiple returns (tuple unpacking)\n",
+    "def min_max(nums):\n",
+    "    return min(nums), max(nums)\n",
+    "\n",
+    "lo, hi = min_max([3, 1, 7, 2])  # (1, 7)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "d7e6b946",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Multiple returns (tuple unpacking)\n",
+    "def min_max(nums):\n",
+    "    return min(nums), max(nums)\n",
+    "\n",
+    "lo, hi = min_max([3, 1, 7, 2])  # (1, 7)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "3a9c092f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8571428571428571"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Early return to avoid nesting\n",
+    "def safe_div(a, b):\n",
+    "    if b == 0:\n",
+    "        return None\n",
+    "    return a / b\n",
+    "safe_div(6, 7)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "6a2536ae",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['A', 'B', 'C']"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Higher-order function: pass behavior in\n",
+    "def apply(fn, items):\n",
+    "    return [fn(x) for x in items]\n",
+    "\n",
+    "apply(str.upper, [\"a\", \"b\", \"c\"])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "8f34e742",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Pure vs. impure (side effects)\n",
+    "counter = 0\n",
+    "def impure_increment():\n",
+    "    global counter\n",
+    "    counter += 1\n",
+    "    return counter\n",
+    "\n",
+    "def pure_increment(n):\n",
+    "    return n + 1\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "8902ee79",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(1, 'a'), (2, 'b'), (3, 'c')]"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Lambda for quick inline functions\n",
+    "pairs = [(1, \"a\"), (3, \"c\"), (2, \"b\")]\n",
+    "sorted(pairs, key=lambda p: p[0])  # sorts by first element\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "1a6d9e05",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Function with docstring + type hints\n",
+    "from typing import Iterable\n",
+    "\n",
+    "def product(nums: Iterable[int]) -> int:\n",
+    "    \"\"\"\n",
+    "    Multiply all numbers together; returns 1 for an empty iterable.\n",
+    "    \"\"\"\n",
+    "    result = 1\n",
+    "    for n in nums:\n",
+    "        result *= n\n",
+    "    return result\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "d4e90031",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1, 2, 3)"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Using nonlocal (modifying outer-scope variable in nested function)\n",
+    "def make_counter():\n",
+    "    count = 0\n",
+    "    def inc():\n",
+    "        nonlocal count\n",
+    "        count += 1\n",
+    "        return count\n",
+    "    return inc\n",
+    "\n",
+    "c = make_counter()\n",
+    "c(), c(), c()  # 1, 2, 3\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "2736a51b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Recursive with memoization\n",
+    "from functools import lru_cache\n",
+    "\n",
+    "@lru_cache(maxsize=None)\n",
+    "def climb_stairs(n: int) -> int:\n",
+    "    if n <= 2:\n",
+    "        return n\n",
+    "    return climb_stairs(n - 1) + climb_stairs(n - 2)\n",
+    "\n",
+    "climb_stairs(5)  # 8\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "9f2caa35",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(25, 8)"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Curried function (returns another configured function)\n",
+    "def raise_to(power):\n",
+    "    def inner(x):\n",
+    "        return x ** power\n",
+    "    return inner\n",
+    "\n",
+    "square = raise_to(2)\n",
+    "cube = raise_to(3)\n",
+    "square(5), cube(2)  # (25, 8)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "8e8dcadf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Async function\n",
+    "import asyncio\n",
+    "\n",
+    "async def delayed_echo(msg, delay=0.1):\n",
+    "    await asyncio.sleep(delay)\n",
+    "    return msg\n",
+    "\n",
+    "# asyncio.run(delayed_echo(\"hi\"))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "ee5e377b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Decorator that enforces types at runtime (lightweight check)\n",
+    "def enforce_ints(fn):\n",
+    "    def wrapper(*args):\n",
+    "        if not all(isinstance(a, int) for a in args):\n",
+    "            raise TypeError(\"all arguments must be int\")\n",
+    "        return fn(*args)\n",
+    "    return wrapper\n",
+    "\n",
+    "@enforce_ints\n",
+    "def add_three(a, b, c):\n",
+    "    return a + b + c\n",
+    "\n",
+    "add_three(1, 2, 3)\n",
+    "# add_three(1, \"x\", 3)  # raises TypeError\n"
+   ]
   }
  ],
  "metadata": {
