Object Oriented Programming Practice Day - 2

--- a/ObjectOrientedProgramming.ipynb
+++ b/ObjectOrientedProgramming.ipynb
@@ -138,6 +138,316 @@
     "t = Temperature(25)\n",
     "t.fahrenheit, t.celsius\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "f3cabd22",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Car: engine on and moving'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 1) Composition (has-a)\n",
+    "class Engine:\n",
+    "    def start(self):\n",
+    "        return \"engine on\"\n",
+    "\n",
+    "class Car:\n",
+    "    def __init__(self, engine: Engine):\n",
+    "        self.engine = engine\n",
+    "\n",
+    "    def drive(self):\n",
+    "        return f\"Car: {self.engine.start()} and moving\"\n",
+    "\n",
+    "car = Car(Engine())\n",
+    "car.drive()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "c19694c8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 2) Class methods as alternate constructors\n",
+    "class User:\n",
+    "    def __init__(self, name, email):\n",
+    "        self.name, self.email = name, email\n",
+    "\n",
+    "    @classmethod\n",
+    "    def from_string(cls, raw: str):\n",
+    "        name, email = raw.split(\",\")\n",
+    "        return cls(name.strip(), email.strip())\n",
+    "\n",
+    "u = User.from_string(\"Ada Lovelace, ada@example.com\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "ed2e96fd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 3) Static method utility + repr/eq for debugging/testing\n",
+    "class Point:\n",
+    "    def __init__(self, x, y):\n",
+    "        self.x, self.y = x, y\n",
+    "\n",
+    "    def __repr__(self):\n",
+    "        return f\"Point({self.x}, {self.y})\"\n",
+    "\n",
+    "    def __eq__(self, other):\n",
+    "        return isinstance(other, Point) and (self.x, self.y) == (other.x, other.y)\n",
+    "\n",
+    "    @staticmethod\n",
+    "    def origin():\n",
+    "        return Point(0, 0)\n",
+    "\n",
+    "p0 = Point.origin()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "802682b4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "enter\n",
+      ">> working\n",
+      "exit ok\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 4) Context manager via __enter__/__exit__\n",
+    "class Trace:\n",
+    "    def __enter__(self):\n",
+    "        print(\"enter\")\n",
+    "        return self\n",
+    "\n",
+    "    def __exit__(self, exc_type, exc, tb):\n",
+    "        print(\"exit\", exc_type or \"ok\")\n",
+    "        return False  # propagate exceptions\n",
+    "\n",
+    "    def log(self, msg):\n",
+    "        print(\">>\", msg)\n",
+    "\n",
+    "with Trace() as t:\n",
+    "    t.log(\"working\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "8637383f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'{\"name\": \"pen\", \"price\": 1.5}'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 5) Mixin for reusable behavior\n",
+    "class JsonMixin:\n",
+    "    def to_json(self):\n",
+    "        import json\n",
+    "        return json.dumps(self.__dict__)\n",
+    "\n",
+    "class Product(JsonMixin):\n",
+    "    def __init__(self, name, price):\n",
+    "        self.name, self.price = name, price\n",
+    "\n",
+    "p = Product(\"pen\", 1.5)\n",
+    "p.to_json()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "f6df017a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "28.274333882308138"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 6) Property with computed + cached value\n",
+    "class Circle:\n",
+    "    def __init__(self, r):\n",
+    "        self.r = r\n",
+    "\n",
+    "    @property\n",
+    "    def area(self):\n",
+    "        from math import pi\n",
+    "        return pi * self.r * self.r\n",
+    "\n",
+    "c = Circle(3)\n",
+    "c.area\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "07b7ad7b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'email: hello'"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 7) Abstract base + multiple inheritance\n",
+    "from abc import ABC, abstractmethod\n",
+    "\n",
+    "class Notifier(ABC):\n",
+    "    @abstractmethod\n",
+    "    def send(self, msg): ...\n",
+    "\n",
+    "class EmailMixin(Notifier):\n",
+    "    def send(self, msg):\n",
+    "        return f\"email: {msg}\"\n",
+    "\n",
+    "class SMSMixin(Notifier):\n",
+    "    def send(self, msg):\n",
+    "        return f\"sms: {msg}\"\n",
+    "\n",
+    "class Alert(EmailMixin, SMSMixin):\n",
+    "    pass\n",
+    "\n",
+    "Alert().send(\"hello\")  # resolves by MRO (EmailMixin first)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "39d171f6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 8) Dataclass with validation in __post_init__\n",
+    "from dataclasses import dataclass\n",
+    "\n",
+    "@dataclass\n",
+    "class Account:\n",
+    "    owner: str\n",
+    "    balance: float\n",
+    "\n",
+    "    def __post_init__(self):\n",
+    "        if self.balance < 0:\n",
+    "            raise ValueError(\"balance must be non-negative\")\n",
+    "\n",
+    "    def deposit(self, amount: float):\n",
+    "        self.balance += amount\n",
+    "\n",
+    "acct = Account(\"Sam\", 100.0)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "a59f0d35",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[5, 4, 3, 2, 1]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 9) Iterables: defining __iter__ for custom containers\n",
+    "class Countdown:\n",
+    "    def __init__(self, start):\n",
+    "        self.start = start\n",
+    "\n",
+    "    def __iter__(self):\n",
+    "        n = self.start\n",
+    "        while n > 0:\n",
+    "            yield n\n",
+    "            n -= 1\n",
+    "\n",
+    "list(Countdown(5))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "43c7188d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "15.00 USD"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 10) Operator overloading for math-like behavior\n",
+    "class Money:\n",
+    "    def __init__(self, amount, currency=\"USD\"):\n",
+    "        self.amount = amount\n",
+    "        self.currency = currency\n",
+    "\n",
+    "    def __add__(self, other):\n",
+    "        if self.currency != other.currency:\n",
+    "            raise ValueError(\"currency mismatch\")\n",
+    "        return Money(self.amount + other.amount, self.currency)\n",
+    "\n",
+    "    def __repr__(self):\n",
+    "        return f\"{self.amount:.2f} {self.currency}\"\n",
+    "\n",
+    "m1 = Money(10)\n",
+    "m2 = Money(5)\n",
+    "m1 + m2  # 15.00 USD\n"
+   ]
   }
  ],
  "metadata": {
